Fix getting current path